Custom--app/main/default/objects/HOA_Payments__c/HOA_Payments__c.object-meta.xml
<CustomObject>
    <description>This is part of the HOA application and can be used to generate the spreadsheet to request HOA payments from corporate accounting.</description>
    <label>HOA Dues Payment</label>
    <nameField>
        <displayFormat>HOADuesPayment-{0000}</displayFormat>
        <label>HOA Dues Payment Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HOA Dues Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>