Custom--app/main/default/objects/HOA_Payments__c/fields/Additional_Payment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>