Custom--app/main/default/objects/HOA_Payments__c/fields/Addt_l_Payment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Addt_l_Payment_Comments__c</fullName>
    <label>Addt'l Payment Comments</label>
    <type>TextArea</type>
</CustomField>