Custom--app/main/default/objects/HOA_Payments__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <formula>IF (  CONTAINS(Payment_Freqency_retired__c, "Month"), "5020200", "1243300")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>