Custom--app/main/default/objects/HOA_Payments__c/fields/HOA_Tracker__c.field-meta.xml
<CustomField>
    <fullName>HOA_Tracker__c</fullName>
    <label>HOA Tracker</label>
    <referenceTo>HOA_Tracking__c</referenceTo>
    <relationshipName>HOA_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>