Custom--app/main/default/objects/HOA_Payments__c/fields/Last_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Due_Date__c</fullName>
    <formula>HOA_Tracker__r.Last_HOA_Payment_Date__c</formula>
    <label>Last Payment Due Date</label>
    <type>Date</type>
</CustomField>