Custom--app/main/default/objects/HOA_Payments__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This is a formula field has been requested by corporate accounting.</description>
    <formula>HOA_Tracker__r.HOA_Account_Number__c &amp; "-"&amp; "Assessment"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field has been requested by corporate accounting.</inlineHelpText>
    <label>Notes</label>
    <type>Text</type>
</CustomField>