Custom--app/main/default/objects/HOA_Payments__c/fields/Payment_Freqency_retired__c.field-meta.xml
<CustomField>
    <fullName>Payment_Freqency_retired__c</fullName>
    <formula>TEXT(HOA_Tracker__r.Payment_Frequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Freqency_retired</label>
    <type>Text</type>
</CustomField>