Custom--app/main/default/objects/HOA_Payments__c/fields/Payment_Frequency_new__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_new__c</fullName>
    <label>Payment Frequency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>