Custom--app/main/default/objects/HOA_Payments__c/fields/Property_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Number__c</fullName>
    <formula>HOA_Tracker__r.Property__r.Property_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Number</label>
    <type>Text</type>
</CustomField>