Custom--app/main/default/objects/HOA_Payments__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>HOA_Tracker__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market2</label>
    <type>Text</type>
</CustomField>