Custom--app/main/default/objects/HOA_Payments__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>This is a formula field has been requested by corporate accounting.

HOA_Tracker__r.HOA_Account_Number__c &amp; "-" &amp; "Assessment"</description>
    <formula>HOA_Tracker__r.HOA_Account_Number__c &amp; " " &amp; 

CASE(MONTH( DATEVALUE(CreatedDate)), 
1, "2", 
2, "3", 
3, "4", 
4, "5", 
5, "6", 
6, "7", 
7, "8", 
8, "9", 
9, "10", 
10, "11", 
11, "12", 
12, "01", 
"xxx999xxx") 

&amp; "/" &amp; TEXT(YEAR(Due_Date__c )) 

&amp; " " &amp; Payment_Frequency_new__c 

&amp; " " &amp; "Assessment"</formula>
    <inlineHelpText>This is a formula field has been requested by corporate accounting.</inlineHelpText>
    <label>Remarks</label>
    <type>Text</type>
</CustomField>