Custom--app/main/default/objects/HOA_Payments__c/fields/Total_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_to_Pay__c</fullName>
    <formula>Monthly_Amount__c + Additional_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>