Custom--app/main/default/objects/HOA_Payments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>