Custom--app/main/default/objects/HOA_Payments__c/listViews/HOADues_Las_Vegas.listView-meta.xml
<ListView>
    <fullName>HOADues_Las_Vegas</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Las Vegas</value>
    </filters>
    <label>HOADues Las Vegas</label>
</ListView>